profile文を少し変更

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="box">
         <h2>名前</h2>
-        <p>（ここに書いてね）</p>
+        <p>（竹内轟三郎）</p>
 
         <h2>趣味</h2>
         <p>（ここに書いてね）</p>
