--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     <div class="box">
         <h2>名前</h2>
-        <p>（竹内轟三郎）</p>
+        <p>竹内轟三郎</p>
 
         <h2>趣味</h2>
-        <p>（ここに書いてね）</p>
+        <p>ここに書いてね</p>
 
         <h2>目標</h2>
         <p>（ここに書いてね）</p>
