--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title>私のプロフィール</title>
-    <style>
-        body { font-family: Arial, sans-serif; padding: 20px; line-height: 1.6; }
-        h1 { color: #333; }
-        .box { background: #f3f3f3; padding: 15px; border-radius: 8px; }
-    </style>
+
+    <!-- CSSファイルを読み込む -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -22,7 +19,7 @@
         <p>ここに書いてね</p>
 
         <h2>目標</h2>
-        <p>（ここに書いてね）</p>
+        <p>ここに書いてね</p>
     </div>
 
 </body>
