javaでボタンを追加！

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         <h2>目標</h2>
         <p>ここに書いてね</p>
     </div>
+    
+    <button onclick="changeMessage()">押してね</button>
 
+    <p id="msg">ここが変わる場所</p>
+
+    <script src="script.js"></script>
 </body>
 </html>
