--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         <h2>目標</h2>
         <p>ここに書いてね</p>
     </div>
-    
+
     <button onclick="changeMessage()">押してね</button>
+    <button onclick="showAlert()">挨拶する</button>
 
     <p id="msg">ここが変わる場所</p>
 
