--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <p>ここに書いてね</p>
     </div>
 
+    <p id= "dataArea">ここにデータが出る</p>
+    <button onclick="showData()">データ表示</button>
+
     <button onclick="changeMessage()">押してね</button>
     <button onclick="showAlert()">挨拶する</button>
 
