--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <p id= "dataArea">ここにデータが出る</p>
     <button onclick="showData()">データ表示</button>
 
+    <p id="colorText">この文字の色が変わります</p>
+    <button onclick="changeColor()">色を変える</button>
+
     <button onclick="changeMessage()">押してね</button>
     <button onclick="showAlert()">挨拶する</button>
 
