htmlでイベント方式ボタン追加

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
 
     <p id="msg">ここが変わる場所</p>
 
+    
+    <button id = "eventBtn">イベント方式ボタン</button>
+    <p id = "eventMsg">ここが変わる</p>
+
+
     <script src="script.js"></script>
 </body>
 </html>
