--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
     <button id = "eventBtn">イベント方式ボタン</button>
     <p id = "eventMsg">ここが変わる</p>
 
+    <h2>APIへ名前を送る</h2>
+
+    <input id = "nameInput" type = "text" placeholder="名前を入力してね">
+    <p id = "sendButton">送信！</p>
+
+    <p id = "sendButton">送信！</p>
 
     <script src="script.js"></script>
 </body>
