--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <h2>APIへ名前を送る</h2>
 
     <input id = "nameInput" type = "text" placeholder="名前を入力してね">
-    <p id = "sendButton">送信！</p>
+    <button id = "sendButton">送信！</button>
 
-    <p id = "sendButton">送信！</p>
+    <p id = "apiResult">ここに結果が表示されるよ</p>
 
     <script src="script.js"></script>
 </body>
