カロリー計算追加

--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
 
     <p id = "apiResult">ここに結果が表示されるよ</p>
 
+    <h2>消費カロリー計算</h2>
+    <p>体重(kg)と運動時間(分)を入力してね</p>
+
+    <input id = "weightInput" type = "number" placeholder = "体重(kg)">
+    <input id = "timeInput" type = "number" placeholder = "時間(分)">
+    <button id = "calcButton">計算する</button>
+
+    <p id = "calorieResult">ここにカロリーが表示されるよ！</p>
+
     <script src="script.js"></script>
 </body>
 </html>
