書いておきたいこと

--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
 
     <p id = "calorieResult">ここにカロリーが表示されるよ！</p>
 
+    <h2>ミニ攻撃ゲーム</h2>
+    <p>攻撃力と敵の防御力を入力して「攻撃！」を押してね</p>
+
+    <input id="attackInput" type="number" placeholder="攻撃力">
+    <input id="defenseInput" type="number" placeholder="敵の防御力">
+    <button id="attackButton">攻撃！</button>
+
+    <p id="attackResult">ここに攻撃結果が表示されるよ</p>
+
     <script src="script.js"></script>
 </body>
 </html>
