--- a/week2/day2.html
+++ b/week2/day2.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<heml lang="ja">
-
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <title>W2 Day2 関数の練習</title>
 </head>
-
 <body>
+
     <h1>W2 Day2: 関数の練習ページ</h1>
-    <p>Consoleを開いて、実行結果を確認してね！</p>
+    <p>Console を開いて、実行結果を確認してね！</p>
 
     <script src="day2.js"></script>
+</body>
+</html>
