書いておきたいこと

--- a/week2/day4.html
+++ b/week2/day4.html
@@ -9,6 +9,10 @@
     <h1>W2 day4 DOM操作×イベント応用</h1>
     <p> Console を開いて結果を確認してね！</p>
 
+
+    <p id="msg">ここが変わる場所</p>
+    <button id="btn">押してね</button>
+
     <script src = "day4.js"></script>
 
 </body>
