書いておきたいこと

--- a/week2/day4.html
+++ b/week2/day4.html
@@ -13,6 +13,10 @@
     <p id="msg">ここが変わる場所</p>
     <button id="btn">押してね</button>
 
+
+    <p id = "secret">ここは隠されているメッセージ</p>
+    <button id = "toggle">表示/非表示</button>
+
     <script src = "day4.js"></script>
 
 </body>
