書いておきたいこと

--- a/day6.html
+++ b/day6.html
@@ -11,5 +11,13 @@
 
     <p>FastAPI</p>
 
+    <input id="inputName" type="text" placeholder="名前を入力してね">
+    <button id = "sendBtn">送信！</button>
 
+    <p id = "result">ここに結果がでるよ！</p>
+
+
+
+
+    <script src = "day6.js"></script>
 </body>
