--- a/week3/day1.html
+++ b/week3/day1.html
@@ -10,12 +10,12 @@
     <h1>自己紹介</h1>
 
     <p>名前</p>
-    <imput id = "name" type = "text" placeholder="名前を入れてね"></imput>
+    <imput id = "nameInput" type = "text" placeholder="名前を入れてね"></imput>
 
     <p>職業</p>
-    <imput id = "job" type = "text" placeholder="職業を入れてね"></imput>
+    <imput id = "jobInput" type = "text" placeholder="職業を入れてね"></imput>
 
-    <button id="greetBtn">自己紹介する！</button>
+    <button id="sendBtn">送信</button>
 
     <p id="result">ここに結果が出る</p>
 
