書いておきたいこと

--- a/week3/day1.html
+++ b/week3/day1.html
@@ -10,10 +10,10 @@
     <h1>自己紹介</h1>
 
     <p>名前</p>
-    <imput id = "nameInput" type = "text" placeholder="名前を入れてね"></imput>
+    <input id = "nameInput" type = "text" placeholder="名前を入れてね"></imput>
 
     <p>職業</p>
-    <imput id = "jobInput" type = "text" placeholder="職業を入れてね"></imput>
+    <input id = "jobInput" type = "text" placeholder="職業を入れてね"></imput>
 
     <button id="sendBtn">送信</button>
 
