--- a/bmi-app/index.html
+++ b/bmi-app/index.html
@@ -9,8 +9,8 @@
     
     <h1>BMI計算</h1>
 
-    <input id="inputHeight" type="number" placeholder="身長"/>
-    <input id="inputKg" type="number" placeholder="体重"/>
+    <input id="heightInput" type="number" placeholder="身長"/>
+    <input id="kgInput" type="number" placeholder="体重"/>
     
     <Button id="calcBtn">計算する</Button>
 
