--- a/bmi-app/index.html
+++ b/bmi-app/index.html
@@ -15,7 +15,8 @@
     <Button id="calcBtn">計算する</Button>
 
     <h1>結果</h1>
-    <p id="result">ここに結果が出るよ</p>
+    <p id="weightresult">適正体重はここに出るよ</p>
+    <p id="BMIresult">BMIはここに出るよ</p>
 
     <h1>※計算式</h1>
     <p>BMI = 体重kg ÷ (身長ｍ)²</p>
