--- a/bmi-app/index.html
+++ b/bmi-app/index.html
@@ -17,6 +17,8 @@
     <h1>結果</h1>
     <p id="weightresult">適正体重はここに出るよ</p>
     <p id="BMIresult">BMIはここに出るよ</p>
+    <p id="BMIjudge">ここにあなたのBMIの判定結果を表示するよ</p>
+
 
     <h1>※計算式</h1>
     <p>BMI = 体重kg ÷ (身長ｍ)²</p>
