--- a/bmi-app/index.html
+++ b/bmi-app/index.html
@@ -18,12 +18,13 @@
     <p id="weightresult">適正体重はここに出るよ</p>
     <p id="BMIresult">BMIはここに出るよ</p>
     <p id="BMIjudge">ここにあなたのBMIの判定結果を表示するよ</p>
-
+    <p id="advice">ここにアドバイスがでるよ</p>
 
     <h1>※計算式</h1>
     <p>BMI = 体重kg ÷ (身長ｍ)²</p>
     <p>適正体重 = (身長ｍ)² × 22</p>
 
+    <link rel="stylesheet" href="style.css"> 
     <script src ="script.js"></script>
 </body>
 </html>
